# $Id$

2007-07-01	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveIdentifier.class.php: added ability
	get object not only by getById method.

2007-07-01	Konstantin V. Arkhipov

	* core/Form/Filters/TrimFilter.class.php: direction support added.

	* main/Utils/ClassUtils.class.php: callStaticMethod, checkStaticMethod
	methods added.

2007-06-30	Sergey M. Skachkov

	* core/Form/Filter.class.php: trim() now return new TrimFilter
	instance.

	* core/Form/Filters/TrimFilter.class.php: charlist support added.

2007-06-29	Anton E. Lebedevich

	*  main/Utils/TextUtils.class.php: normalizeUri added.

2007-06-28	Ivan Y. Khvostishkov

	* main/Utils/: ContentTypeHeader.class.php,
	DoctypeDeclaration.class.php, CommonDoctypeDeclaration.class.php:
	introduced.

2007-06-28	Denis M. Gabaidulin

	* core/Form/Form.class.php: importPrimitive method patched for
	correction work with primitive aliases when Form import data from raw
	http.

2007-06-27	Ivan Y. Khvostishkov

	* main/Utils/IO/: BufferedInputStream, FileInputStream and
	StringInputStream implemented, changed default behaviour for parent
	classes.

2007-06-27	Denis M. Gabaidulin

	* main/Flow/ModelAndView.class.php: viewIsNormal method added.

2007-06-22	Anton E. Lebedevich

	* main/Base/Calendar*: calendar moved to Date.

2007-06-21	Dmitry A. Lomash

	* test/main/FeedReaderTest.class.php: added tests for FeedReader.

2007-06-21	Dmitry A. Lomash

	* main/Utils/Feed/: added feed manipulation classes.

2007-06-20	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: now all methods returning single
	object or object list are using identity map.

2007-06-19	Konstantin V. Arkhipov

	* main/SPL/bundled/: removed, it was a bad idea.

2007-06-18	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveString.class.php: simple url
	pattern added.

2007-06-18	Konstantin V. Arkhipov

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-16	Konstantin V. Arkhipov

	* 0.10.2 released.
